# pulseaudio-equalizer-ladspa-fedora

./: .SRCINFO  .gitignore  CICD.md  ENHANCEMENT-SUCCESS.md  MANUAL-RELEASE.md  PIPEWIRE-PATCH.md  PKGBUILD  README-fedora.md  README-pipewire.md  README.md  SUMMARY.md  VERSION-MANAGEMENT.md  build-fedora-rpm.sh  meson.build  meson_options.txt  pipewire-compatibility-fixed.patch  pulseaudio-equalizer-ladspa.spec
.github/workflows/: build-and-release.yml  ci.yml  dev-build.yml  manual-release.yml
data/: meson.build  pulseaudio-equalizer.service.in
data/ui/: Equalizer.ui
patches/: pipewire-compatibility.patch  pulseaudio-equalizer-pipewire.sh  pulseaudio-equalizer.in
pulseeq/: constants.py  equalizer.py
